Guillotine Lib - Documentation (#9)

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = Guillotine library
 
 include::docs/text/description.adoc[]
-[[include:pagename]]
+[[include:docs/text/description.adoc]]
 
 == Compatibility
 
