--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -9,8 +9,10 @@ Including the ability to follow references, child items and access media directl
 
 == Usage
 
+=== Include the library
+
 To include the library in your Enonic XP application, 
-you will need to add the Enonic repository to the repository list:
+you will first need to add the Enonic repository to the repository list:
 
 [source,gradle]
 ----
@@ -21,7 +23,7 @@ repositories {
 }
 ----
 
-Then add the following dependency (where ``<version>`` is the actual version to use):
+Then add the following dependency (where `<version>` is the actual version to use):
 
 [source,gradle]
 ----
@@ -29,4 +31,37 @@ dependencies {
     include 'com.enonic.lib:lib-sql:<version>'
 }
 ----
+
+=== API
+
+The library proposes two solutions:
+. Generate the entire GraphQL schema with possibilities to modify and extend it.
+. Generate the Headless CMS Graph type to include
+
+TODO
+
+== Examples
+
+=== Example 1: Generate a service with the default guillotine schema
+
+Create an Enonic XP service file (example: /services/graphql/graphql.js) with the following code:
+./services/graphql/graphql.js
+[source,javascript]
+----
+var guillotineLib = require('/lib/guillotine');
+var graphQlLib = require('/lib/graphql');
+
+var schema;
+exports.post = function (req) {
+    schema = schema || guillotineLib.createSchema();
+    var body = JSON.parse(req.body);
+    var result = graphQlLib.execute(schema, body.query, body.variables);
+    return {
+        contentType: 'application/json',
+        body: result
+    };
+};
+----
+
+You now have a 
 
