--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -137,28 +137,28 @@ fetch('{{graphqlServiceUrl}}', {
 == Extend & modify Guillotine schema
 
 The default Guillotine schema provides fields based on the content type schemas.
-But you might want to add new retrieval methods, search in a separate database, add virtual fields, ...
-The guillotine is entirely configurable by letting you modify the parameters of each type before they get created.
+But you might want to add/modify/delete fields (new retrieval methods, search in a separate database, virtual fields, ...).
+
+The guillotine schema is entirely configurable by letting you modify the parameters of each type before they get created.
 
 [NOTE] 
 .GraphQL - Enonic XP Library
 ==== 
 A library has been implemented to facilitate the creation of a GraphQL service on Enonic XP: `lib-graphql`.
 Guillotine uses this library internally. The comprehension of the library is not necessary if you are using the default schema of Guillotine.
-
-But if you decide to extend the schema with custom types, we recommend to learn more about it by following the link below:
+But if you decide to extend the schema with custom types, we recommend you to learn more about it by following the link below:
 
 https://github.com/enonic/lib-graphql[Learn more about the GraphQL library...]
 ====
 
 === Example
 
-In this example using blog posts and authors, we want the following:
+In this example, we want the following:
 
-* The author should have a new field "fullName" that is the concatenation of firstName and lastName
-* There should be a relationship "posts" returning all the blog posts written by an author
-* The existing author data field "email" should require admin rights to be retrieved.
-* The existing author data field "birthDate" should not be accessible through the GraphQL API.
+* Author should have a new field "fullName" that is the concatenation of firstName and lastName
+* Author data field "email" should require admin rights to be retrieved.
+* Author data field "birthDate" should not be accessible through the GraphQL API.
+* Author should have a new field "posts" returning all the blog posts written by an author
 
 ./services/graphql/graphql.js
 [source,javascript]
@@ -168,17 +168,21 @@ var guillotineLib = require('/lib/guillotine');
 var graphQlLib = require('/lib/graphql');
 
 var schema = guillotineLib.createSchema({
-    creationCallbacks: {
-        'com_enonic_app_myapp_Post': function(context, params){ <1>
+    creationCallbacks: {         
+        'com_enonic_app_myapp_Author_Data': function(context, params){ <1>
             params.fields.fullName = {  <2>
                  type: graphQlLib.GraphQLString,
                  resolve: function (env) {
                      return env.source.firstName + ' ' + env.source.lastName;
                  }
              };
-        },        
+            params.fields.email.resolve = function (env) { <3>
+                return authLib.hasRole('system.admin') ? env.source.email : null
+            };            
+            delete params.fields.birthDate;  <4>
+        },  
         'com_enonic_app_myapp_Author': function(context, params){ <1>
-            params.fields.posts = { <3>
+            params.fields.posts = { <5>
                 type: graphQlLib.list(graphQlLib.reference('com_enonic_app_myapp_Post')),
                 resolve: function (env) {
                     return contentLib.query({
@@ -192,12 +196,6 @@ var schema = guillotineLib.createSchema({
                     }).hits;
                 }
             };
-        },     
-        'com_enonic_app_myapp_Author_Data': function(context, params){ <1>
-            params.fields.email.resolve = function (env) { <4>
-                return authLib.hasRole('system.admin') ? env.source.email : null
-            };            
-            delete params.fields.birthDate;  <5>
         }
     }
 );
@@ -211,14 +209,13 @@ exports.post = function (req) {
     };
 };
 ----
-
 <1> Pass a callback that will be called before the creation of the specified GraphQL type. 
 It receives the Guillotine context and the object type creation parameters.
 <2> Adds a new string field "fullName" concatenating two other fields.
-<3> Adds a new field "posts" returning a list of posts. 
 The resolution function will query contents of type post having the current author ID as field "data.author"
-<4> Overwrites the resolution of an existing field "email"
-<5> Deletes an existing field "birthDate"
+<3> Overwrites the resolution function of an existing field "email"
+<4> Deletes an existing field "birthDate"
+<5> Adds a new field "posts" returning a list of posts. 
 
 
 These are only examples. You could also modify the type 'Query' and add an entire new API next to the Headless CMS API. 
@@ -226,11 +223,11 @@ These are only examples. You could also modify the type 'Query' and add an entir
 
 == Integrate the Headless CMS to your existing schema
 
-* You have an existing GraphQL schema and you wish to integrate Guillotine types to this schema.
+You have an existing GraphQL schema and you wish to integrate Guillotine types to this schema.
 ** Use the functions `createContext` and `createHeadlessCms`
 ** See example 3
 
-==== Example 3: Integrate the Headless CMS to your existing schema
+==== Example
 
 TODO
 
