Guillotine Lib - Documentation (#9)

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -9,7 +9,6 @@ Including the ability to follow references, child items and access media directl
 
 
 [NOTE] 
-.GraphQL
 ==== 
 GraphQL is a query language developed by Facebook. 
 This technology allows Guillotine to provide a single and exhaustive API 
@@ -42,14 +41,6 @@ dependencies {
 
 === Step 2: Create a GraphQL endpoint
 
-* Schema creation - Call the guillotine function `createSchema`. 
-By default, guillotine will generate a GraphQL schema containing the built-in content types and the content types defined by your application.
-* Query execution - Handle POST requests, parse their body to retrieve the GraphQL query and variables and execute these query and 
-variables against the schema using the graphql function `execute`.
-
-
-==== Create a service using the default guillotine schema
-
 * Create an Enonic XP service file /services/graphql/graphql.js` with the following content:
 
 ./services/graphql/graphql.js
@@ -79,15 +70,50 @@ The GraphQL library is already included with Guillotine and does not need to be 
 You now have a GraphQL endpoint.
 
 
-== How to use your GraphQL endpoint
-
-=== GraphiQL
+== Browse you API using GraphiQL
 
 The easiest way to manually explore a GraphQL API and test GraphQL queries is to use GraphiQL
 
-link:graphiql.html[Learn more about GraphiQL...]
+=== Installation 
 
-=== Client
+* Open the admin tool "Applications"
+* Search for the "graphiql" application
+* Click on "install"
+* Open the admin tool "GraphiQL"
+
+image::images/graphiql.png[GraphiQL,768,384]
+
+=== User Interface
+
+* The field 'Service Location' specifies the location of the GraphQL service. 
++
+By default, it is prefilled with one of your configured sites for the branch "draft".
+* The left panel allows you to edit your graphQL query
+* The center panel displays the result of the query execution
+* The right panel is used to display a documentation generated from the GraphQL API.
+
+=== Usage example
+
+* Write the query below inside the left panel.
++
+This query can be read as: Retrieve the display name and type of the current content.
+* Click on the query execution button above
+* The service response is displayed in the center panel
+
+----
+{
+  guillotine {
+    get {
+      displayName
+      type
+    }
+  }
+}
+----
+
+image::images/graphiql-example.png[Example,768,384]
+
+== Accessing the API with Javascript
 
 To use your GraphQL service, your client will send all its requests to the same service.
 The service is expecting to receive a POST request with inside its body:
@@ -95,7 +121,7 @@ The service is expecting to receive a POST request with inside its body:
 * A mandatory "query" String
 * An optional "variables" Object
 
-==== Example: Generate a service URL from a controller
+=== Example: Generate a service URL from a controller
 
 [source,javascript]
 ----
@@ -105,7 +131,7 @@ var graphqlServiceUrl = portalLib.serviceUrl({
 });
 ----
 
-==== Example: Fetch data from a javascript client
+=== Example: Fetch data from a javascript client
 [source,javascript]
 ----
 const query = `query($path:ID!){
@@ -133,149 +159,110 @@ fetch('{{graphqlServiceUrl}}', {
     .then(console.log);
 ----
 
-== Guillotine GraphQL API
+== Using the API
 
-link:api.html[Learn more about the GraphQL API...]
+At the root of the default Guillotine schema is a type `Query` with a field `guillotine` of type `HeadlessCms`.
+The `HeadlessCms` type gathers fields allowing to retrieve contents or related data.
 
-== How to extend the schema
+=== Content
 
-The default Guillotine schema provides fields based on the content type schemas.
-But you might want to add/modify/delete fields (new retrieval methods, search in a separate database, virtual fields, ...).
+The type `Content` is an interface with multiple implementations generated from built-in content types but also from content types defined by your application.
+All types implementing `Content` share the same fields at the exception of the field `data` defined for each implementation type.
 
-The guillotine schema is entirely configurable. 
-When creating a schema, you can define a listener for a GraphQL type. 
-This listener will be called before the type is created and given the possibility to modify the type creation parameters.
+=== Relations
 
-[NOTE] 
-.GraphQL - Enonic XP Library
-==== 
-A library has been implemented to facilitate the creation of a GraphQL service on Enonic XP: `lib-graphql`.
-Guillotine uses this library internally. The comprehension of the library is not necessary if you are using the default schema of Guillotine.
-But if you decide to extend the schema with custom types, we recommend you to learn more about it by following the link below:
+Multiple relations are generated to allow to navigate between contents.
+By default, each content has the following relations:
 
-https://github.com/enonic/lib-graphql[Learn more about the GraphQL library...]
-====
+* parent: Link to the parent content 
+* children: Link to the child contents
+* site: Link to the nearest site content
 
-=== Example
+Moreover, every ContentSelector, MediaUploader, AttachmentUploader or ImageSelector defined in your content type form will 
+be converted to a link to the related content(s).
 
-In this example, we have the types Author and Post generated. But we wish to apply the following modifications:
+==== Example: Children 
 
-* Author should have a new field "fullName" that is the concatenation of firstName and lastName
-* Author data field "email" should require admin rights to be retrieved.
-* Author data field "birthDate" should not be accessible through the GraphQL API.
-* Author should have a new field "posts" returning all the blog posts written by an author
+Query example: Retrieve the display name of the current content and the display name of its direct children
 
-./services/graphql/graphql.js
-[source,javascript]
 ----
-var contentLib = require('/lib/xp/content');
-var guillotineLib = require('/lib/guillotine');
-var graphQlLib = require('/lib/graphql');
-
-var schema = guillotineLib.createSchema({
-    creationCallbacks: {         
-        'com_enonic_app_myapp_Author_Data': function(context, params){ <1>
-            params.fields.fullName = {  <2>
-                 type: graphQlLib.GraphQLString,
-                 resolve: function (env) {
-                     return env.source.firstName + ' ' + env.source.lastName;
-                 }
-             };
-            params.fields.email.resolve = function (env) { <3>
-                return authLib.hasRole('system.admin') ? env.source.email : null
-            };            
-            delete params.fields.birthDate;  <4>
-        },  
-        'com_enonic_app_myapp_Author': function(context, params){ <1>
-            params.fields.posts = { <5>
-                type: graphQlLib.list(graphQlLib.reference('com_enonic_app_myapp_Post')),
-                resolve: function (env) {
-                    return contentLib.query({
-                        contentTypes: [app.name + ":Post"],
-                        filters: {
-                            hasValue: {
-                                field: "data.author",
-                                values: [env.source._id]
-                            }
-                        }
-                    }).hits;
-                }
-            };
-        }
+{
+  guillotine {
+    get {
+      displayName
+      children {
+        displayName
+      }
     }
-);
-
-exports.post = function (req) {
-    var body = JSON.parse(req.body);
-    var result = graphQlLib.execute(schema, body.query, body.variables);
-    return {
-        contentType: 'application/json',
-        body: result
-    };
-};
-----
-<1> Passes a callback that will be called before the creation of the specified GraphQL type. 
-It receives the Guillotine context and the object type creation parameters.
-<2> Adds a new string field "fullName" concatenating two other fields.
-The resolution function will query contents of type post having the current author ID as field "data.author"
-<3> Overwrites the resolution function of an existing field "email"
-<4> Deletes an existing field "birthDate"
-<5> Adds a new field "posts" returning a list of posts. 
-
-
-These are only examples. You could also modify the type 'Query' and add an entire new API next to the Headless CMS API. 
-
-
-== How to integrate Guillotine types to an existing schema
-
-You may have an existing GraphQL schema and wish to integrate Guillotine to this schema. 
-In that case, use the functions `createContext` and `createHeadlessCmsType` instead of `createSchema`
-
-==== Example
-
-./services/graphql/graphql.js
-[source,javascript]
-----
-var guillotineLib = require('/lib/guillotine');
-var graphQlLib = require('/lib/graphql');
-
-var schema = createSchema();
-
-exports.post = function (req) {
-    var body = JSON.parse(req.body);
-    var result = graphQlLib.execute(schema, body.query, body.variables);
-    return {
-        contentType: 'application/json',
-        body: result
-    };
-};
-
-function createSchema() {
-    var context = guillotineLib.createContext(); <1>
-    return graphQlLib.createSchema({
-        query: createRootQueryType(context),
-        dictionary: context.dictionary <2>
-    });
+  }
 }
+----
 
-function createRootQueryType(context) {
-    return graphQlLib.createObjectType({
-        name: 'Query',
-        fields: {
-            guillotine: {
-                type: guillotineLib.createHeadlessCmsType(context), <3>
-                resolve: function () {
-                    return {};
-                }
-            }
+==== Example: ContentSelector
+
+Query example: Retrieve the blog posts. For each post, return its display name and the display name of the related author
+
+----
+{
+  guillotine {
+    query(contentTypes:"com.enonic.app.myapp:post") {
+      displayName
+      ... on com_enonic_app_myapp_Post {
+        data {          
+          author {
+            displayName
+          }
         }
-    });
+      }
+    }
+  }
 }
 ----
-<1> Creates the context necessary to create Guillotine types.
-<2> Passes the dictionary to the schema creation. The use of a dictionary is necessary to define interface implementations.
-<3> Creates the Guillotine Headless CMS type
 
+=== Image
 
+Enonic XP can edit images at runtime.
+Guillotine uses this functionality by generating, on every image, a field "imageUrl" generating a URL pointing to the processed image.
 
+==== Example: Scaled Image URL
 
+Query example: Retrieve the image contents and generate absolute URLs to these images cropped to 800x200px
+
+----
+{
+  guillotine {
+    query(contentTypes:"media:image") {
+      displayName
+      ... on media_Image {
+        imageUrl(scale:"block(800,200)",type:absolute)
+      }
+    }
+  }
+}
+----
+
+=== HTML
+
+HTML fields are generated with a parameter "processHtml" allowing to replace abstract internal links by generated URLs. 
+
+==== Example: Process HTML
+
+Query example: Retrieve the Superhero blog posts. For each post, return its author display name, tags and processed content.
+
+----
+{
+  guillotine {
+    query(contentTypes:"com.enonic.app.myapp:post") {
+      ... on com_enonic_app_myapp_Post {
+        data {
+          author {
+            displayName
+          }
+          tags
+          post(processHtml:{type:absolute})
+        }
+      }
+    }
+  }
+}
+----
